--- a/FirebasePhoneAuth/Base.lproj/Main.storyboard
+++ b/FirebasePhoneAuth/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FirebasePhoneAuth" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,66 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="+918447970978" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hlM-de-7Ix">
+                                <rect key="frame" x="16" y="28" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tHJ-jt-ADB">
+                                <rect key="frame" x="143" y="66" width="88" height="30"/>
+                                <state key="normal" title="Authenticate"/>
+                                <connections>
+                                    <action selector="authenticate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ulx-qo-7JF"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Verification Code" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9HD-MG-nBc">
+                                <rect key="frame" x="16" y="111" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PkU-6F-B5v">
+                                <rect key="frame" x="146.5" y="149" width="81" height="30"/>
+                                <state key="normal" title="Verify Code"/>
+                                <connections>
+                                    <action selector="verifyCode:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YYc-e8-fNN"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="obf-v4-wgQ">
+                                <rect key="frame" x="149" y="318" width="77" height="30"/>
+                                <state key="normal" title="Log me out"/>
+                                <connections>
+                                    <action selector="logout:" destination="BYZ-38-t0r" eventType="touchUpInside" id="te7-Ew-Ujx"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="hlM-de-7Ix" secondAttribute="leading" id="7wX-BJ-Guz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hlM-de-7Ix" secondAttribute="trailing" id="A7N-wX-LbF"/>
+                            <constraint firstItem="tHJ-jt-ADB" firstAttribute="centerX" secondItem="hlM-de-7Ix" secondAttribute="centerX" id="Fg2-lq-WQy"/>
+                            <constraint firstItem="PkU-6F-B5v" firstAttribute="top" secondItem="9HD-MG-nBc" secondAttribute="bottom" constant="8" id="GUU-yb-9kA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9HD-MG-nBc" secondAttribute="trailing" id="IJh-zn-6nZ"/>
+                            <constraint firstItem="hlM-de-7Ix" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="NDj-YM-H7I"/>
+                            <constraint firstItem="9HD-MG-nBc" firstAttribute="top" secondItem="tHJ-jt-ADB" secondAttribute="bottom" constant="15" id="Tu9-GE-v9v"/>
+                            <constraint firstItem="PkU-6F-B5v" firstAttribute="centerX" secondItem="9HD-MG-nBc" secondAttribute="centerX" id="Yr4-r7-kSM"/>
+                            <constraint firstItem="tHJ-jt-ADB" firstAttribute="top" secondItem="hlM-de-7Ix" secondAttribute="bottom" constant="8" id="s8t-7Z-pMf"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="9HD-MG-nBc" secondAttribute="leading" id="w86-Tf-zu9"/>
+                            <constraint firstItem="obf-v4-wgQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yuW-pY-yQh"/>
+                            <constraint firstItem="obf-v4-wgQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zsk-Pe-ZJP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="logoutButton" destination="obf-v4-wgQ" id="Np0-Ts-tdj"/>
+                        <outlet property="phoneNumberField" destination="hlM-de-7Ix" id="Qk9-fB-Y0d"/>
+                        <outlet property="verificationCodeTextField" destination="9HD-MG-nBc" id="29e-zb-mQQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
